--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "start": "nps"
   },
   "devDependencies": {
+    "@types/auth0-js": "*",
+    "@types/auth0-lock": "^10.10.1",
     "@types/lodash": "^4.14.62",
     "@types/node": "^7.0.12",
     "@types/toastr": "^2.1.33",
@@ -59,6 +61,7 @@
     "aurelia-templating-binding": "^1.3.0",
     "aurelia-templating-resources": "^1.4.0",
     "aurelia-templating-router": "^1.1.0",
+    "auth0-lock": "^10.14.0",
     "bluebird": "^3.5.0",
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.18.1",
