--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/auth0-js": "*",
     "@types/auth0-lock": "^10.10.1",
+    "@types/jwt-decode": "^1.4.28",
     "@types/lodash": "^4.14.62",
     "@types/node": "^7.0.12",
     "@types/toastr": "^2.1.33",
@@ -64,6 +65,7 @@
     "auth0-lock": "^10.14.0",
     "bluebird": "^3.5.0",
     "isomorphic-fetch": "^2.2.1",
+    "jwt-decode": "^2.2.0",
     "moment": "^2.18.1",
     "toastr": "^2.1.2"
   }
