--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "aurelia-bootstrapper": "^2.1.1",
+    "aurelia-chart": "^0.2.7",
     "aurelia-fetch-client": "^1.1.2",
     "aurelia-framework": "^1.1.2",
     "aurelia-history-browser": "^1.0.0",
