--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "skeleton-typescript-webpack",
+  "name": "PriceWise",
   "version": "1.0.0",
-  "description": "A starter kit for building a standard navigation-style app with Aurelia and Webpack.",
+  "description": "A web application to monitor product prices.",
   "main": "dist/app.bundle.js",
   "repository": {
     "url": "git+ssh://git@github.com/aurelia/skeleton-navigation.git",
     "type": "git"
   },
-  "author": "Bazyli Brzóska <bazyli.brzoska@gmail.com> (https://invent.life/)",
+  "author": "Maxime Gaudreault Proulx <swcommander@gmail.com>",
   "license": "CC0-1.0",
   "engines": {
     "node": ">= 6.0.0"
