--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "aurelia-bootstrapper": "^2.1.1",
     "aurelia-chart": "^0.2.7",
+    "aurelia-configuration": "^1.0.17",
     "aurelia-fetch-client": "^1.1.2",
     "aurelia-framework": "^1.1.2",
     "aurelia-history-browser": "^1.0.0",
@@ -65,6 +66,7 @@
     "auth0-lock": "^10.15.1",
     "bluebird": "^3.5.0",
     "isomorphic-fetch": "^2.2.1",
+    "jquery": "^3.2.1",
     "jwt-decode": "^2.2.0",
     "moment": "^2.18.1",
     "toastr": "^2.1.2"
