Added google analytics

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "aurelia-configuration": "^1.0.17",
     "aurelia-fetch-client": "^1.1.2",
     "aurelia-framework": "^1.1.2",
+    "aurelia-google-analytics": "^2.2.0",
     "aurelia-history-browser": "^1.0.0",
     "aurelia-loader-webpack": "^2.1.0",
     "aurelia-logging-console": "^1.0.0",
