Used new real domain

--- a/static/config.json
+++ b/static/config.json
@@ -7,6 +7,6 @@
     },
     "production": {
         "api": "https://price-alerts-api.azurewebsites.net/",
-        "web": "https://pricewise.azurewebsites.net/"
+        "web": "https://pricewi.se/"
     }
 }
