Setup for the localization

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "aurelia-framework": "^1.1.2",
     "aurelia-google-analytics": "^2.2.0",
     "aurelia-history-browser": "^1.0.0",
+    "aurelia-i18n": "^1.6.2",
     "aurelia-loader-webpack": "^2.1.0",
     "aurelia-logging-console": "^1.0.0",
     "aurelia-pal-browser": "^1.2.1",
@@ -67,6 +68,7 @@
     "aurelia-templating-router": "^1.1.0",
     "auth0-lock": "^10.15.1",
     "bluebird": "^3.5.0",
+    "i18next-xhr-backend": "^1.4.2",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.2.1",
     "jwt-decode": "^2.2.0",
