--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "start": "nps"
   },
   "devDependencies": {
-    "@types/auth0-js": "*",
-    "@types/jwt-decode": "^1.4.28",
+    "@types/auth0-js": "7.0",
+    "@types/jwt-decode": "1.4.28",
     "@types/lodash": "^4.14.62",
     "@types/node": "^7.0.12",
     "@types/toastr": "^2.1.33",
     "@types/webpack": "^2.2.14",
+    "@types/jquery": "2.0",
     "aurelia-loader-nodejs": "^1.0.1",
     "aurelia-pal-nodejs": "1.0.0-beta.1.0.0",
     "aurelia-webpack-plugin": "^2.0.0-rc.2",
