--- a/static/config.json
+++ b/static/config.json
@@ -1,9 +1,13 @@
 {
     "api": "http://localhost:5000/",
-    "web": "http://localhost:8080/", 
+    "web": "http://localhost:8080/",
     "development": {
         "api": "http://localhost:5000/",
         "web": "http://localhost:8080/"
+    },
+    "staging": {
+        "api": "http://pricewise-api-staging.azurewebsites.net",
+        "web": "http://pricewise-web-staging.azurewebsites.net/"
     },
     "production": {
         "api": "https://price-alerts-api.azurewebsites.net/",
