--- a/static/config.json
+++ b/static/config.json
@@ -6,7 +6,7 @@
         "web": "http://localhost:8080/"
     },
     "staging": {
-        "api": "https://pricewise-api-staging.azurewebsites.net",
+        "api": "https://pricewise-api-staging.azurewebsites.net/",
         "web": "https://pricewise-web-staging.azurewebsites.net/"
     },
     "production": {
