--- a/static/config.json
+++ b/static/config.json
@@ -1,6 +1,7 @@
 {
     "api": "http://localhost:5000/",
     "web": "http://localhost:8080/",
+    "chrome": "https://chrome.google.com/webstore/detail/pricewise-chrome/dnkalnjnohfonmebilnjjgeefldmkfmm",
     "development": {
         "api": "http://localhost:5000/",
         "web": "http://localhost:8080/"
