--- a/web.config
+++ b/web.config
@@ -17,6 +17,8 @@
 			</rules>
 		</rewrite>
 		<staticContent>
+			<clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="30.00:00:00" />
+			<mimeMap fileExtension=".png" mimeType="image/png" />
 			<mimeMap fileExtension=".json" mimeType="application/json" />
 			<mimeMap fileExtension=".woff" mimeType="application/font-woff" />
 			<mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
