--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "start": "nps"
   },
   "devDependencies": {
-    "@types/auth0-js": "7.0",
+    "@types/auth0-js": "^8.10.0",
+    "@types/jquery": "2.0",
     "@types/jwt-decode": "1.4.28",
     "@types/lodash": "^4.14.62",
     "@types/node": "^7.0.12",
     "@types/toastr": "^2.1.33",
     "@types/webpack": "^2.2.14",
-    "@types/jquery": "2.0",
     "aurelia-loader-nodejs": "^1.0.1",
     "aurelia-pal-nodejs": "1.0.0-beta.1.0.0",
     "aurelia-webpack-plugin": "^2.0.0-rc.2",
@@ -66,7 +66,7 @@
     "aurelia-templating-binding": "^1.3.0",
     "aurelia-templating-resources": "^1.4.0",
     "aurelia-templating-router": "^1.1.0",
-    "auth0-lock": "^10.15.1",
+    "auth0-js": "^8.10.1",
     "bluebird": "^3.5.0",
     "i18next-xhr-backend": "^1.4.2",
     "isomorphic-fetch": "^2.2.1",
