--- a/web.config
+++ b/web.config
@@ -14,6 +14,14 @@
 					<action type="Redirect" url="https://{HTTP_HOST}/{R:1}" appendQueryString="true" redirectType="Permanent" />
 				</rule>
 				<!-- END rule TAG FOR HTTPS REDIRECT -->
+				<remove name="redirect all requests" />
+				<rule name="redirect all requests" stopProcessing="true">
+					<match url="^(.*)$" ignoreCase="false" />
+					<conditions logicalGrouping="MatchAll">
+						<add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" pattern="" ignoreCase="false" />
+					</conditions>
+					<action type="Rewrite" url="index.html" appendQueryString="true" />
+				</rule>
 			</rules>
 		</rewrite>
 		<staticContent>
