--- a/package.json
+++ b/package.json
@@ -56,12 +56,12 @@
     "aurelia-framework": "^1.1.2",
     "aurelia-google-analytics": "^2.2.0",
     "aurelia-history-browser": "^1.0.0",
-    "aurelia-i18n": "git://github.com/droda59/i18n.git#patch-1",
+    "aurelia-i18n": "^2.1.0",
     "aurelia-loader-webpack": "^2.1.0",
     "aurelia-logging-console": "^1.0.0",
     "aurelia-pal-browser": "^1.2.1",
     "aurelia-polyfills": "^1.2.1",
-    "aurelia-router": "^1.3.0",
+    "aurelia-router": "^1.5.0",
     "aurelia-templating": "^1.4.1",
     "aurelia-templating-binding": "^1.3.0",
     "aurelia-templating-resources": "^1.4.0",
