--- a/package.json
+++ b/package.json
@@ -49,29 +49,29 @@
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
-    "aurelia-bootstrapper": "^2.1.1",
-    "aurelia-chart": "^0.2.7",
-    "aurelia-configuration": "^1.0.17",
-    "aurelia-fetch-client": "^1.1.2",
-    "aurelia-framework": "^1.1.2",
-    "aurelia-google-analytics": "^2.2.0",
-    "aurelia-history-browser": "^1.0.0",
-    "aurelia-i18n": "^2.1.0",
-    "aurelia-loader-webpack": "^2.1.0",
-    "aurelia-logging-console": "^1.0.0",
-    "aurelia-pal-browser": "^1.2.1",
-    "aurelia-polyfills": "^1.2.1",
-    "aurelia-router": "^1.5.0",
-    "aurelia-templating": "^1.4.1",
-    "aurelia-templating-binding": "^1.3.0",
-    "aurelia-templating-resources": "^1.4.0",
-    "aurelia-templating-router": "^1.1.0",
-    "auth0-js": "^8.10.1",
-    "bluebird": "^3.5.0",
-    "i18next-xhr-backend": "^1.4.2",
-    "isomorphic-fetch": "^2.2.1",
-    "jquery": "^3.2.1",
-    "jwt-decode": "^2.2.0",
-    "toastr": "^2.1.2"
+    "aurelia-bootstrapper": "2.1.1",
+    "aurelia-chart": "0.2.7",
+    "aurelia-configuration": "1.0.17",
+    "aurelia-fetch-client": "1.2.0",
+    "aurelia-framework": "1.1.5",
+    "aurelia-google-analytics": "2.3.1",
+    "aurelia-history-browser": "1.1.0",
+    "aurelia-i18n": "2.1.0",
+    "aurelia-loader-webpack": "2.1.0",
+    "aurelia-logging-console": "1.0.0",
+    "aurelia-pal-browser": "1.3.1",
+    "aurelia-polyfills": "1.2.2",
+    "aurelia-router": "1.5.0",
+    "aurelia-templating": "1.7.0",
+    "aurelia-templating-binding": "1.4.0",
+    "aurelia-templating-resources": "1.5.4",
+    "aurelia-templating-router": "1.3.0",
+    "auth0-js": "8.12.2",
+    "bluebird": "3.5.1",
+    "i18next-xhr-backend": "1.5.1",
+    "isomorphic-fetch": "2.2.1",
+    "jquery": "3.2.1",
+    "jwt-decode": "2.2.0",
+    "toastr": "2.1.4"
   }
 }
