--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
+    "aurelia-binding": "1.6.0",
     "aurelia-bootstrapper": "2.1.1",
     "aurelia-chart": "0.2.7",
     "aurelia-configuration": "1.0.17",
